<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <include layout="@layout/mytoolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingStart="12dp">

        <TextView
            android:id="@+id/tv_watchlists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFeatureSettings="smcp"
            android:text="@string/existing_watchlists"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_btn_add"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:contentDescription="@string/add_list_description"
            android:padding="0dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:paddingStart="12dp">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/created"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_dummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_watchlists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>